# ComputacaoDeAltoDesempenho

./: .gitignore  README.md
code/: CMakeLists.txt  main.cpp
code2/: CMakeLists.txt  main.cpp  runmpi.sh
code2/IntegralEvaluator/: main.cpp
code3/: CMakeLists.txt  main.cpp
documentation/: article.tex  results.csv
documentation/article01/: article.tex  preamble.tex
documentation/article01/code/: integral.cpp
documentation/article02/: article.tex  references.bib
documentation/article02/presentation/: apresentacao.nav  apresentacao.snm  apresentacao.tex  apresentacao.toc  preamble.tex
documentation/article02/text/: article.tex  preamble.tex  references.bib
documentation/article03/: article.tex  references.bib
documentation/article03/code/: integral2.cpp.tex
